--- a/backend/.env.prod
+++ b/backend/.env.prod
@@ -1,9 +1,9 @@
 APP_NAME="Eco Power Tech Global API"
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=https://backen.ecopowertechglobal.test
-APP_TIMEZONE=UTC
+APP_ENV=production
+APP_KEY=base64:h2MvHa3vNikp+BP8AaIavysWA1D+pR6ENvyeQq9R8dU=
+APP_DEBUG=false
+APP_URL=https://backend.ecopowertech.co.ke
+APP_TIMEZONE=Africa/Nairobi
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -12,9 +12,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=eco_power_tech_ecommerce
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=ecopowertech_co_ke
+DB_USERNAME=makuno
+DB_PASSWORD=m@kunoBiz96@2020M
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -59,6 +59,6 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SANCTUM_STATEFUL_DOMAINS=ecopowertechglobal.test
-SESSION_DOMAIN=ecopowertechglobal.test
-FRONTEND_URL=https://ecopowertechglobal.test
+SANCTUM_STATEFUL_DOMAINS=ecopowertech.co.ke
+SESSION_DOMAIN=ecopowertech.co.ke
+FRONTEND_URL=https://ecopowertech.co.ke
