Add frontend URL to CORS allowed origins

--- a/backend/.env.prod
+++ b/backend/.env.prod
@@ -3,6 +3,9 @@ APP_ENV=production
 APP_KEY=base64:h2MvHa3vNikp+BP8AaIavysWA1D+pR6ENvyeQq9R8dU=
 APP_DEBUG=false
 APP_URL=https://backend.ecopowertech.co.ke
+SANCTUM_STATEFUL_DOMAINS=ecopowertech.co.ke,backend.ecopowertech.co.ke
+SESSION_DOMAIN=.ecopowertech.co.ke
+FRONTEND_URL=https://ecopowertech.co.ke
 APP_TIMEZONE=Africa/Nairobi
 
 LOG_CHANNEL=stack
@@ -58,7 +61,3 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-SANCTUM_STATEFUL_DOMAINS=ecopowertech.co.ke
-SESSION_DOMAIN=ecopowertech.co.ke
-FRONTEND_URL=https://ecopowertech.co.ke
