--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.6.0",
     "pinia": "^2.1.0",
+    "sweetalert2": "^11.26.2",
     "vue": "^3.4.0",
     "vue-router": "^4.2.0"
   },
